--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   crystal_navigation_bar: ^1.0.4
   youtube_player_flutter: ^9.1.3
   video_player: ^2.10.1
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
