--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   youtube_player_flutter: ^9.1.3
   video_player: ^2.10.1
   webview_flutter: ^4.13.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
